--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-Flask==1.1.2
-Flask-Bcrypt==0.7.1
-Flask-Login==0.5.0
-Flask-Shelve==0.1.1
-Jinja2==2.11.2
-joblib==0.16.0
-regex==2020.6.8
-requests==2.23.0
-scikit-learn==0.23.2
-websockets==7.0
-Werkzeug==1.0.1
-WTForms==2.3.3
-Flask-JWT==0.3.2
-Pillow==7.2.0
-Flask-WTF==0.14.3
+Flask>=1.1.2
+Flask-Bcrypt>=0.7.1
+Flask-Login>=0.5.0
+Flask-Shelve>=0.1.1
+Jinja2>=2.11.2
+joblib>=0.16.0
+regex>=2020.6.8
+requests>=2.23.0
+scikit-learn>=0.23.2
+websockets>=7.0
+Werkzeug>=1.0.1
+WTForms>=2.3.3
+Flask-JWT>=0.3.2
+Pillow>=7.2.0
+Flask-WTF>=0.14.3
 dnspython>=0.0.0
