--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cffi==1.14.4
 chardet==4.0.0
 click==7.1.2
 dnspython==2.0.0
+email-validator==1.1.2
 Flask==1.1.2
 Flask-JWT==0.3.2
 Flask-Login==0.5.0
