--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Flask-JWT==0.3.2
 Flask-Login==0.5.0
 Flask-Shelve==0.1.1
 Flask-SQLAlchemy==2.4.4
+Flask-Uploads==0.2.1
 Flask-WTF==0.14.3
 idna==2.10
 itsdangerous==1.1.0
@@ -20,10 +21,10 @@ MarkupSafe==1.1.1
 mypy-extensions==0.4.3
 numpy==1.19.4
 pathspec==0.8.1
-Pillow==8.0.1
 pycparser==2.20
 PyJWT==2.0.0
 pymongo==3.11.2
+quantumrandom==1.9.0
 regex==2020.11.13
 requests==2.25.1
 scikit-learn==0.24.0
@@ -38,4 +39,3 @@ urllib3==1.26.2
 websockets==8.1
 Werkzeug==1.0.1
 WTForms==2.3.3
-flask-uploads==0.2.1
