--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ mypy-extensions==0.4.3
 ndg-httpsclient==0.5.1
 numpy==1.19.5
 pathspec==0.8.1
+Pillow==8.1.0
 pusher==3.0.0
 pyasn1==0.4.8
 pycparser==2.20
